str_reprincludedir = ${pkgincludedir}/str-repr

str_reprinclude_HEADERS =	\
  lib/str-repr/decode.h		\
  lib/str-repr/encode.h		\
  lib/str-repr/list-scanner.h

str_repr_sources =		\
 lib/str-repr/decode.c		\
 lib/str-repr/encode.c		\
 lib/str-repr/list-scanner.c

include lib/str-repr/tests/Makefile.am
